[package]
name = "lofi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "lofi"
path = "src/lib.rs"

[[bin]]
name = "lofi-cli"
path = "src/main.rs"

[dependencies]
automerge = "0.7.4"
samod = { features = ["tokio", "axum", "tungstenite"], version = "0.8.0" }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
anyhow = "1.0.102"
aes-gcm-siv = "0.11.1"
scrypt = "0.11.0"
futures-util = "0.3.32"
# TODO Change back to version number if/when PR #3 gets merged (https://codeberg.org/dpp/automorph/pulls/3)
automorph = { git = "https://codeberg.org/RedCommander735/automorph.git" }
thiserror = "2.0.18"
